--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "^4.0.0-beta",
     "casual": "^1.5.17",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
